--- a/src/styles/GlobalStyle/GlobalStyle.css
+++ b/src/styles/GlobalStyle/GlobalStyle.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    color: inherit;
 }
 
 :root {
@@ -16,7 +17,6 @@
     --light-900: #2f2f2f;
     --light-1000: black;
     --light-gray: #fff;
-
     --header-height: 60px;
 }
 
@@ -32,7 +32,8 @@
 
 html {
     font-size: 62.5%;
-
+    color: var(--light-900);
+    
 }
 
 html ::-webkit-scrollbar {
@@ -67,13 +68,33 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
-}
+    /* background-color: var(--light-100); */
 
+}
+.btn-hover:hover,
 .btn:hover {
     cursor: pointer;
+    transform: scale(1.1);;
 }
 
-.btn,
+.btn-hover{
+    transition: transform 0.5s ease;
+
+}
+
+
+.btn{
+    padding: 6px 16px ;
+    border-radius: 4px;
+    transition: transform 0.5s ease;
+
+}
+
+.btn + .btn {
+    margin-left: 6px; 
+  }
+
+.btn:hover,
 a:hover,
 button:hover {
     opacity: 0.7;
@@ -83,7 +104,7 @@ button:hover {
 .header{
     height: var(--header-height);
     background-color: var(--light-100);
-    color: var(--light-700);
+    border-bottom: 1px solid var(--light-500);
 
 }
 
@@ -98,16 +119,23 @@ button:hover {
 }
 
 .input-search{
-    padding: 1rem 2rem;
+    padding: 1.2rem 2rem;
     width: 400px;
     background-color: var(--light-300);
-    border-radius: 4px;
+    border-radius: 100px;
+    border: 1px solid var(--light-300);
 }
 
 .icon-wrap{
-    padding: 8px;
+    height: 40px;
+    width: 40px;
     position: relative;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 .dropdown-content{
     position: absolute;
@@ -119,10 +147,16 @@ button:hover {
     border-radius: 4px;
 }
 
+.icon-wrap:hover{
+    background-color: var(--light-300);
+}
+
 .dropdown-content div{
     padding:  8px 8px;
+}
 
-    
+.text{
+    color:var(--light-900)
 }
 
 a{
@@ -134,3 +168,59 @@ a{
 .dropdown-content div:hover{
     background-color: var(--light-500);
 }
+
+/* home */
+
+.home{
+    background-color: var(--light-100);
+    height: calc(100vh - var(--header-height));
+}
+
+.contact-table-container {
+    max-width: 800px; /* Adjust the maximum width based on your design */
+    margin: auto;
+
+  }
+  
+  .table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px; /* Adjust the margin based on your design */
+  }
+  
+  .table th,
+  .table td {
+    padding: 12px;
+    text-align: left;
+    border: 1px solid #dee2e6;
+  }
+  
+  .table th {
+    background-color: var(--light-300);
+
+  }
+  
+  .table tbody tr:hover {
+    background-color: var(--light-300); /* Highlight on hover */
+  }
+  
+  /* .btn {
+    padding: 6px 12px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+   */
+  .btn-info {
+    color: #fff;
+    background-color: #5bc0de;
+    border: 1px solid #46b8da;
+  }
+  
+  .btn-danger {
+    color: #fff;
+    background-color: #d9534f;
+    border: 1px solid #d43f3a;
+  }
+  
