--- a/src/styles/GlobalStyle/GlobalStyle.css
+++ b/src/styles/GlobalStyle/GlobalStyle.css
@@ -169,6 +169,7 @@ a {
 
 .home,
 .edit {
+    position: relative;
   background-color: var(--light-100);
   height: calc(100vh - var(--header-height));
 }
@@ -208,6 +209,9 @@ a {
     cursor: pointer;
   }
    */
+.padding-v-4{
+    padding: 4rem 0rem;
+}
 .btn-info {
   color: #fff;
   background-color: #5bc0de;
@@ -258,4 +262,17 @@ a {
 .save-btn{
     background-color: blue;
     color: white;
+}
+
+/* model  */
+.model-container{
+    position: absolute;
+    top: -60px;
+    left: 0;
+    background-color:var(--light-100);
+    width: 100vw;
+    height: 100vh;
+}
+.model-wrap{
+
 }
